--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,13 +1,11 @@
 <div class="container p-4">
     <nav>
       <div class="nav nav-tabs">
-        <button class="nav-link active" type="button">Home</button>
-        <button class="nav-link" type="button">Users</button>
+        <button class="nav-link active" type="button" [routerLink]="['/home/']" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">Users</button>
+        <button class="nav-link" type="button" (click)="clickUser()">User</button>
       </div>
     </nav>
     <div class="tab-content border border-top-0" id="nav-tabContent">
-      <div class="tab-pane fade show active">
-        <h1 class="text-center py-5">Home</h1>
-      </div>
+      <router-outlet></router-outlet>
     </div>
   </div>
